--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:18-alpine
 WORKDIR /app
+
+COPY package*.json ./
+RUN npm install --prefer-offline
+
 COPY . .
-RUN npm install
 RUN npm run build
 RUN npm install -g serve
 CMD ["serve", "-s", "build", "-l", "3000"]
