--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
-version: '3.8'
 
 services:
   backend:
     build:
       context: ./backend
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/app
+      - ./backend:/app:cached  # improves performance slightly
     env_file:
       - .env
+    restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app:cached  # improves rebuild time slightly
+    restart: unless-stopped
