--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.11-slim
+
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install --default-timeout=100 -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+
 EXPOSE 8000
