--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,16 @@
+version: "3.9"
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend:/app:cached  # improves performance slightly
     env_file:
       - .env
     restart: unless-stopped
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    build: ./frontend
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app:cached  # improves rebuild time slightly
     restart: unless-stopped
