--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,23 @@
-FROM node:18-alpine
+# ---------- Build Stage ----------
+FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --prefer-offline
+RUN npm install
 
 COPY . .
 RUN npm run build
+
+
+# ---------- Production Stage ----------
+FROM node:18-alpine
+WORKDIR /app
+
 RUN npm install -g serve
-CMD ["serve", "-s", "build", "-l", "3000"]
+
+COPY --from=builder /app/build ./build
+
+ENV PORT=3000
 EXPOSE 3000
+
+CMD ["sh", "-c", "serve -s build -l ${PORT}"]
